tests/samples/negative/modules/cyclic_import.ax
module cyclic_import;

import cycle.a;

fn main() -> i32 {
    return 0;
}
